@@ -1,3 +1,14 @@
+Next release
+============
+
+- A new header ``X-Tm`` is now honored by the ``default_commit_veto`` commit
+veto hook. If this header exists in the headerlist, its value must be a
+string. If its value is ``commit``, the transaction will be committed
+regardless of the status code or the value of ``X-Tm-Abort``. If the value
+of the ``X-Tm`` header is ``abort`` (or any other string value except
+``commit``), the transaction will be aborted, regardless of the status code
+or the value of ``X-Tm-Abort``.
+
 0.1 (2011-02-23)
 ----------------
 
